# handler/routes.go
@@ -1,6 +1,8 @@
 package handler
 
 import (
+	"beginner/router/middleware"
+
 	"github.com/labstack/echo/v4"
 )
 
@@ -12,4 +14,8 @@ func (h *Handler) RegisterRoutes(v1 *echo.Group) {
 	auth := v1.Group("/auth")
 	auth.POST("/login", h.Login)
 	auth.POST("/register", h.Register)
+
+	/* user */
+	user := v1.Group("/user", middleware.JwtMiddleware())
+	user.GET("/me", h.GetMe)
 }
